# fatty_acid_macro

./: Cargo.toml
src/: lib.rs  parser.rs
tests/: test.rs
