[package]
name = "fatty_acid_macro"
version = "0.6.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.110"
polars = { version = "0.50.0", default-features = false, features = [
    "dtype-i8",
    "dtype-struct",
    "dtype-u8",
    "fmt",
] }
